infrastructure/base/traefik-dashboard/middleware_rewrite_traefik-dashboard.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dashboard-rewrite
spec:
  addPrefix:
    prefix: /dashboard
