infrastructure/base/traefik-dashboard/ingress_traefik-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-dashboard-rewrite@kubernetescrd
spec:
  rules:
  - host: dashboard.traefik.0.0.0.0.sslip.io
    http:
      paths:
      - backend:
          service:
            name: traefik-dashboard
            port:
              number: 9000
        path: /
        pathType: Prefix
